fixed all namespace errors

--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model FalknerCountyJuvenileCourt.Pages.Juvenile.CreateModel
+@model FalknerCountyJuvenileCourt.Pages.Juveniles.CreateModel
 
 @{
     ViewData["Title"] = "Create";
