--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
@@ -1,5 +1,5 @@
 @page
-@model FalknerCountyJuvenileCourt.Pages.Juvenile.DeleteModel
+@model FalknerCountyJuvenileCourt.Pages.Juveniles.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
