--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model FalknerCountyJuvenileCourt.Pages.Juvenile.DetailsModel
+@model FalknerCountyJuvenileCourt.Pages.Juveniles.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
