--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Edit.cshtml
@@ -1,5 +1,5 @@
 @page
-@model FalknerCountyJuvenileCourt.Pages.Juvenile.EditModel
+@model FalknerCountyJuvenileCourt.Pages.Juveniles.EditModel
 
 @{
     ViewData["Title"] = "Edit";
