--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model FalknerCountyJuvenileCourt.Pages.Juvenile.IndexModel
+@model FalknerCountyJuvenileCourt.Pages.Juveniles.IndexModel
 
 @{
     ViewData["Title"] = "Index";
