--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
@@ -13,10 +13,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Juvenile.Risk_Assessment_ID)
+            @Html.DisplayNameFor(model => model.Juvenile.ID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.Risk_Assessment_ID)
+            @Html.DisplayFor(model => model.Juvenile.ID)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Juvenile.Age)
@@ -25,27 +25,33 @@
             @Html.DisplayFor(model => model.Juvenile.Age)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Juvenile.IsMale)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.IsMale)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Juvenile.RepeatOffender)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.RepeatOffender)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Juvenile.Race)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.Race.RaceID)
+            @Html.DisplayFor(model => model.Juvenile.Race)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Juvenile.Gender)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Juvenile.Gender)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Juvenile.Risk)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Juvenile.Risk)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Juvenile.Repeat)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Juvenile.Repeat)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Juvenile.JuvenileID" />
+        <input type="hidden" asp-for="Juvenile.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
