--- a/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Juveniles/Index">Juveniles</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Crimes/Index">Crimes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Report/Index">Report</a>
                         </li>
                         <li class="nav-item">
@@ -44,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - FaulknerCountyJuvenileCourt - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - Faulkner County Juvenile Court - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
