--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Index.cshtml
@@ -50,10 +50,10 @@
                 @Html.DisplayFor(modelItem => item.Name.Type)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FilingDecision.ID)
+                @Html.DisplayFor(modelItem => item.FilingDecision.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IntakeDecision.ID)
+                @Html.DisplayFor(modelItem => item.IntakeDecision.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.School.Name)
