--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Details.cshtml
@@ -60,7 +60,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Name)
+                            @Html.DisplayFor(modelItem => item.Name.Type)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Date)
