--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
@@ -8,58 +8,58 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Crime</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.Name.Type)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.FilingDecision)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.FilingDecision.ID)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.IntakeDecision)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.IntakeDecision.ID)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.School)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.School.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.DrugOffense)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.DrugOffense)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.DrugCourt)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.DrugCourt)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.Date)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.Date)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.Juvenile)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.Juvenile.ID)
-        </dd>
-    </dl>
+   <h4>Crime</h4>
+   <hr />
+   <dl class="row">
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.Juvenile)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.Juvenile.ID)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.Name)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.Name.Type)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.FilingDecision)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.FilingDecision.Name)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.IntakeDecision)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.IntakeDecision.Name)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.School)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.School.Name)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.DrugOffense)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.DrugOffense)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.DrugCourt)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.DrugCourt)
+      </dd>
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Crime.Date)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Crime.Date)
+      </dd>
+   </dl>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Crime?.ID">Edit</a> |
