--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Crime.Juvenile)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Crime.Juvenile.ID)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Crime.Name)
         </dt>
         <dd class="col-sm-10">
@@ -22,13 +28,13 @@
             @Html.DisplayNameFor(model => model.Crime.FilingDecision)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.FilingDecision.ID)
+            @Html.DisplayFor(model => model.Crime.FilingDecision.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Crime.IntakeDecision)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.IntakeDecision.ID)
+            @Html.DisplayFor(model => model.Crime.IntakeDecision.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Crime.School)
@@ -53,12 +59,6 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Crime.Date)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.Juvenile)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.Juvenile.ID)
         </dd>
     </dl>
     
