--- a/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Download/Index">Download Report</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
