--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Create.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Create.cshtml
@@ -14,24 +14,44 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Crime.JuvenileID" class="control-label"></label>
-                <select asp-for="Crime.JuvenileID" class ="form-control" asp-items="ViewBag.JuvenileID"></select>
+                <label asp-for="Crime.Juvenile" class="control-label"></label>
+                <select asp-for="Crime.Juvenile.ID" class="form-control"
+                        asp-items="@Model.JuvenileNameSL">
+                    <option value="">-- Select one --</option>
+                </select>
+                <span asp-validation-for="Crime.Juvenile.ID" class="text-danger" />
             </div>
             <div class="form-group">
-                <label asp-for="Crime.CrimeTypeID" class="control-label"></label>
-                <select asp-for="Crime.CrimeTypeID" class ="form-control" asp-items="ViewBag.CrimeTypeID"></select>
+                <label asp-for="Crime.Offense" class="control-label"></label>
+                <select asp-for="Crime.Offense.ID" class="form-control"
+                        asp-items="@Model.OffenseNameSL">
+                    <option value="">-- Select one --</option>
+                </select>
+                <span asp-validation-for="Crime.Offense.ID" class="text-danger" />
             </div>
             <div class="form-group">
-                <label asp-for="Crime.FilingDecisionID" class="control-label"></label>
-                <select asp-for="Crime.FilingDecisionID" class ="form-control" asp-items="ViewBag.FilingDecisionID"></select>
+                <label asp-for="Crime.IntakeDecision" class="control-label"></label>
+                <select asp-for="Crime.IntakeDecision.ID" class="form-control"
+                        asp-items="@Model.IntakeNameSL">
+                    <option value="">-- Select one --</option>
+                </select>
+                <span asp-validation-for="Crime.IntakeDecision.ID" class="text-danger" />
             </div>
             <div class="form-group">
-                <label asp-for="Crime.IntakeDecisionID" class="control-label"></label>
-                <select asp-for="Crime.IntakeDecisionID" class ="form-control" asp-items="ViewBag.IntakeDecisionID"></select>
+                <label asp-for="Crime.FilingDecision" class="control-label"></label>
+                <select asp-for="Crime.FilingDecision.ID" class="form-control"
+                        asp-items="@Model.FilingNameSL">
+                    <option value="">-- Select one --</option>
+                </select>
+                <span asp-validation-for="Crime.FilingDecision.ID" class="text-danger" />
             </div>
             <div class="form-group">
-                <label asp-for="Crime.SchoolID" class="control-label"></label>
-                <select asp-for="Crime.SchoolID" class ="form-control" asp-items="ViewBag.SchoolID"></select>
+                <label asp-for="Crime.School" class="control-label"></label>
+                <select asp-for="Crime.School.ID" class="form-control"
+                        asp-items="@Model.SchoolNameSL">
+                    <option value="">-- Select one --</option>
+                </select>
+                <span asp-validation-for="Crime.School.ID" class="text-danger" />
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
