--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Delete.cshtml
@@ -19,22 +19,22 @@
             @Html.DisplayFor(model => model.Crime.Juvenile.ID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.Name)
+            @Html.DisplayNameFor(model => model.Crime.Offense)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.Name.Type)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crime.FilingDecision)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crime.FilingDecision.Name)
+            @Html.DisplayFor(model => model.Crime.Offense.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Crime.IntakeDecision)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Crime.IntakeDecision.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Crime.FilingDecision)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Crime.FilingDecision.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Crime.School)
