--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
@@ -28,19 +28,19 @@
             @Html.DisplayNameFor(model => model.Juvenile.Race)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.Race)
+            @Html.DisplayFor(model => model.Juvenile.Race.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Juvenile.Gender)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.Gender)
+            @Html.DisplayFor(model => model.Juvenile.Gender.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Juvenile.Risk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.Risk)
+            @Html.DisplayFor(model => model.Juvenile.Risk.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Juvenile.Repeat)
