Modified Create and Edit

--- a/FalknerCountyJuvenileCourt/Pages/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>This is the website for the <a href="https://www.faulknercounty.org/government/courts/2nd-div-circuit/juvenile-probation">Faulkner County Juvenile Court's yearly report.</a>.</p>
+    <p>This is the website for the <a href="https://www.faulknercounty.org/government/courts/2nd-div-circuit/juvenile-probation">Faulkner County Juvenile Court's</a> yearly report.</p>
 </div>
