--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Delete.cshtml
@@ -12,6 +12,12 @@
     <h4>Crime</h4>
     <hr />
     <dl class="row">
+      <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Crime.ID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Crime.ID)
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Crime.Juvenile)
         </dt>
