--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
@@ -13,34 +13,39 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Crime.ID" />
             <input type="hidden" asp-for="Crime.Juvenile.ID" />
+            <div class="form-group">
+                <label asp-for="Crime.ID" class="control-label"></label>
+                <div>@Html.DisplayFor(model => model.Crime.ID)</div>
+            </div>
             <div class="form-group">
                 <label asp-for="Crime.Juvenile" class="control-label"></label>
                 <div>@Html.DisplayFor(model => model.Crime.Juvenile.ID)</div>
             </div>
             <div class="form-group">
                 <label asp-for="Crime.Offense" class="control-label"></label>
-                <select asp-for="Crime.Offense.ID" class="form-control" 
+                <select asp-for="Crime.OffenseID" class="form-control" 
                         asp-items="@Model.OffenseNameSL"></select>
-                <span asp-validation-for="Crime.Offense.ID" class="text-danger"></span>
+                <span asp-validation-for="Crime.OffenseID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Crime.IntakeDecision" class="control-label"></label>
-                <select asp-for="Crime.IntakeDecision.ID" class="form-control" 
+                <select asp-for="Crime.IntakeDecisionID" class="form-control" 
                         asp-items="@Model.IntakeNameSL"></select>
-                <span asp-validation-for="Crime.IntakeDecision.ID" class="text-danger"></span>
+                <span asp-validation-for="Crime.IntakeDecisionID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Crime.FilingDecision" class="control-label"></label>
-                <select asp-for="Crime.FilingDecision.ID" class="form-control" 
+                <select asp-for="Crime.FilingDecisionID" class="form-control" 
                         asp-items="@Model.FilingNameSL"></select>
-                <span asp-validation-for="Crime.FilingDecision.ID" class="text-danger"></span>
+                <span asp-validation-for="Crime.FilingDecisionID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Crime.School" class="control-label"></label>
-                <select asp-for="Crime.School.ID" class="form-control" 
+                <select asp-for="Crime.SchoolID" class="form-control" 
                         asp-items="@Model.SchoolNameSL"></select>
-                <span asp-validation-for="Crime.School.ID" class="text-danger"></span>
+                <span asp-validation-for="Crime.SchoolID" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
