--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
@@ -25,27 +25,27 @@
             </div>
             <div class="form-group">
                 <label asp-for="Juvenile.Race" class="control-label"></label>
-                <select asp-for="Juvenile.Race.ID" class="form-control"
+                <select asp-for="Juvenile.RaceID" class="form-control"
                         asp-items="@Model.RaceNameSL">
                     <option value="">-- Select one --</option>
                 </select>
-                <span asp-validation-for="Juvenile.Race.ID" class="text-danger" />
+                <span asp-validation-for="Juvenile.RaceID" class="text-danger" />
             </div>
             <div class="form-group">
                 <label asp-for="Juvenile.Gender" class="control-label"></label>
-                <select asp-for="Juvenile.Gender.ID" class="form-control"
+                <select asp-for="Juvenile.GenderID" class="form-control"
                         asp-items="@Model.GenderNameSL">
                     <option value="">-- Select one --</option>
                 </select>
-                <span asp-validation-for="Juvenile.Gender.ID" class="text-danger" />
+                <span asp-validation-for="Juvenile.GenderID" class="text-danger" />
             </div>
             <div class="form-group">
                 <label asp-for="Juvenile.Risk" class="control-label"></label>
-                <select asp-for="Juvenile.Risk.ID" class="form-control"
+                <select asp-for="Juvenile.RiskID" class="form-control"
                         asp-items="@Model.RiskNameSL">
                     <option value="">-- Select one --</option>
                 </select>
-                <span asp-validation-for="Juvenile.Risk.ID" class="text-danger" />
+                <span asp-validation-for="Juvenile.RiskID" class="text-danger" />
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
