--- a/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Report/Index">Report</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Download/Index">Download Report</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ExcelDownload">Download Report</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial"/>
