--- a/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
@@ -19,9 +19,8 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Home">Home</a>
-                        </li>
+                        @if(User.Identity.IsAuthenticated)
+                        {
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Juveniles/Index">Juveniles</a>
                         </li>
@@ -31,6 +30,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tables/Index">Tables</a>
                         </li>
+
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Report/Index">Report</a>
                         </li>
