cleaned up index page for the tables tab
added some text and a title to make the page more clear and look better

--- a/FalknerCountyJuvenileCourt/Pages/Tables/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Tables/Index.cshtml
@@ -4,11 +4,47 @@
     ViewData["Title"] = "Tables";
 }
 
-<div class="text-center">
-   <h1 class="display-8"><a asp-area="" asp-page="/Offenses/Index">Offenses</a></h1>
-   <h1 class="display-8"><a asp-area="" asp-page="/Schools/Index">Schools</a></h1>
-   <h1 class="display-8"><a asp-area="" asp-page="/IntakeDecisions/Index">Intake Decisions</a></h1>
-   <h1 class="display-8"><a asp-area="" asp-page="/FilingDecisions/Index">Filing Decisions</a></h1>
-   <h1 class="display-8"><a asp-area="" asp-page="/Races/Index">Races</a></h1>
-   <h1 class="display-8"><a asp-area="" asp-page="/Genders/Index">Genders</a></h1>
-</div>
+<head>
+  <style>
+    #container {
+      position: relative;
+      min-height: 75vh;
+    }
+    #footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: #f2f2f2;
+      text-align: center;
+      padding: 10px 0;
+      color: gray;
+    }
+  </style>
+</head>
+<body>
+  <div id="container">
+    <div id="content">
+      <<div class="text-center">
+    <H1>Table Hub</H1>
+    <p aria-setsize="4">
+      Below you can find the links to important tables that help the database run. 
+    </p>
+    
+    
+   <h2 class="display-8"><a asp-area="" asp-page="/Offenses/Index">Offenses</a></h2>
+   <h2 class="display-8"><a asp-area="" asp-page="/Schools/Index">Schools</a></h2>
+   <h2 class="display-8"><a asp-area="" asp-page="/IntakeDecisions/Index">Intake Decisions</a></h2>
+   <h2 class="display-8"><a asp-area="" asp-page="/FilingDecisions/Index">Filing Decisions</a></h2>
+   <h2 class="display-8"><a asp-area="" asp-page="/Races/Index">Races</a></h2>
+   <h2 class="display-8"><a asp-area="" asp-page="/Genders/Index">Genders</a></h2>
+   </div>
+    </div>
+    <div id="footer">
+      In each table you are able to edit, add, and remove objects as you please. 
+    Adding to one these tables allowes you to edit or add a juvenile with that new attribute
+    </div>
+  </div>
+  </body>
+
+
+
