updating the crimes pages
added descriptions of the page to each page related to crimes

--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
@@ -4,7 +4,21 @@
 @{
     ViewData["Title"] = "Details";
 }
-
+<head>
+    <style>
+        #bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+    </style>
+</head>
+<div id=bottom>
+    Here you are able to see the details of this crime.
+</div>
 <h1>Details</h1>
 
 <div>
