--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
@@ -5,6 +5,21 @@
     ViewData["Title"] = "Edit";
 }
 
+<head>
+    <style>
+        #bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+    </style>
+</head>
+<div id=bottom>
+    Here you are able to edit this crime.
+</div>
 <h1>Edit</h1>
 
 <h4>Crime</h4>
