adding descriptions to each page
added a description of each page to the footer

--- a/FalknerCountyJuvenileCourt/Pages/Genders/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Genders/Delete.cshtml
@@ -4,6 +4,21 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<head>
+    <style>
+        #bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+    </style>
+</head>
+<div id=bottom>
+    Here you are able to delete a type of gender, it will not be able to be assigned to a juvenile after being deleted.
+</div>
 
 <h1>Delete</h1>
 
