--- a/FalknerCountyJuvenileCourt/Pages/FilingDecisions/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/FilingDecisions/Edit.cshtml
@@ -4,6 +4,21 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<head>
+    <style>
+        #bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+    </style>
+</head>
+<div id=bottom>
+    Here you are able to edit a type of filing decision.
+</div>
 
 <h1>Edit</h1>
 
