--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Index.cshtml
@@ -4,6 +4,21 @@
 @{
     ViewData["Title"] = "Juveniles";
 }
+<head>
+    <style>
+        #bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+    </style>
+</head>
+<div id=bottom>
+    Here you are able to view the current juveniles in the database.
+</div>
 
 <h1>Juveniles</h1>
 
