--- a/FalknerCountyJuvenileCourt/Pages/Schools/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Schools/Index.cshtml
@@ -4,6 +4,21 @@
 @{
     ViewData["Title"] = "Schools";
 }
+<head>
+    <style>
+        #bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+    </style>
+</head>
+<div id=bottom>
+    Here you are able to view the possible schools that can be assigned to a juvenile.
+</div>
 
 <h1>Schools</h1>
 
