--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
@@ -14,6 +14,7 @@
       background: white;
       text-align: center;
       padding: 10px 0;
+      line-height: 43px;
     }
     </style>
 </head>
