--- a/FalknerCountyJuvenileCourt/Pages/Schools/Create.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Schools/Create.cshtml
@@ -13,6 +13,7 @@
       background: white;
       text-align: center;
       padding: 10px 0;
+      line-height: 43px;
     }
     </style>
 </head>
