--- a/FalknerCountyJuvenileCourt/wwwroot/css/site.css
+++ b/FalknerCountyJuvenileCourt/wwwroot/css/site.css
@@ -1,15 +1,26 @@
 html {
   font-size: 14px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 @media (min-width: 768px) {
   html {
     font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
   }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+  box-shadow: 0 0 0 0.1rem gray, 0 0 0 0.25rem #258cfb;
+}
+#tableB{
+  color: black;
+  background-color: lightgray;
+  outline: 2px solid black;
+  text-decoration: none;
+  width: 150px;
+  height: 50px;
+  font-size: 27px;
 }
 
 html {
