--- a/FalknerCountyJuvenileCourt/Pages/Offenses/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Offenses/Index.cshtml
@@ -4,19 +4,7 @@
 @{
     ViewData["Title"] = "Offenses";
 }
-<head>
-    <style>
-        #bottom {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background: white;
-      text-align: center;
-      padding: 10px 0;
-      line-height: 43px;
-    }
-    </style>
-</head>
+
 <div id=bottom>
     Here you are able to view possible offenses.
 </div>
@@ -24,7 +12,7 @@
 <h1>Offenses</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a id="Cbtn" asp-page="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -41,8 +29,8 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a id="EDbtn" asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                <a id="EDbtn" asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
