--- a/FalknerCountyJuvenileCourt/wwwroot/css/site.css
+++ b/FalknerCountyJuvenileCourt/wwwroot/css/site.css
@@ -14,11 +14,12 @@ html {
   box-shadow: 0 0 0 0.1rem gray, 0 0 0 0.25rem #258cfb;
 }
 #tableB{
-  color: black;
-  background-color: lightgray;
-  outline: 2px solid black;
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+  outline: 2px solid #0d6efd;
   text-decoration: none;
-  width: 150px;
+  width: fit-content;
   height: 50px;
   font-size: 27px;
 }
@@ -30,4 +31,43 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+#Cbtn{
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+  outline: 2px solid #0d6efd;
+  border-radius: .25rem;
+  text-decoration: none;
+  font-size: 1rem;
+  width: fit-content;
+  height: fit-content;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+}
+#EDbtn{
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+  outline: 2px solid #0d6efd;
+  border-radius: .25rem;
+  text-decoration: none;
+  font-size: .75rem;
+  width: fit-content;
+  height: fit-content;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.25;
+  padding: 0.2rem 0.3rem;
+}
+#bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: white;
+  text-align: center;
+  padding: 10px 0;
+  line-height: 43px;
 }
