--- a/FalknerCountyJuvenileCourt/Pages/Tables/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Tables/Index.cshtml
@@ -17,8 +17,8 @@
     <H1>Table Hub</H1>
 
     <p>
-      Below you can find the links to important tables that help the database run. In each table you are able to edit, add, and remove objects as you please. 
-    Adding to one these tables allowes you to edit or add a juvenile with that new attribute.
+      Below are buttons that link to tables that populate the database. When adding to these tables you are then able to select
+      that newly created entry when creating a new juvenile or crime depending on which table you added to. 
     </p>
     
     
