--- a/FalknerCountyJuvenileCourt/wwwroot/css/site.css
+++ b/FalknerCountyJuvenileCourt/wwwroot/css/site.css
@@ -1,6 +1,11 @@
+* {
+  font-family: 'Roboto Slab', serif;;
+  font-size: 18px;  
+}
 html {
   font-size: 14px;
   font-family: 'Times New Roman', Times, serif;
+  
 }
 
 @media (min-width: 768px) {
@@ -15,9 +20,9 @@ html {
 }
 #tableB{
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-  outline: 2px solid #0d6efd;
+  background-color: black;
+  border-color: black;
+  outline: 2px solid black;
   text-decoration: none;
   width: fit-content;
   height: 50px;
@@ -30,13 +35,17 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  background-color: #885; 
+  padding-bottom: 100px;
 }
+
+
+
 #Cbtn{
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-  outline: 2px solid #0d6efd;
+  background-color: black;
+  border-color: black;
+  outline: 2px solid black;
   border-radius: .25rem;
   text-decoration: none;
   font-size: 1rem;
@@ -49,9 +58,9 @@ body {
 }
 #EDbtn{
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-  outline: 2px solid #0d6efd;
+  background-color: black;
+  border-color: black;
+  outline: 2px solid black;
   border-radius: .25rem;
   text-decoration: none;
   font-size: .75rem;
@@ -66,8 +75,23 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background: white;
+  /*background: white;*/
   text-align: center;
   padding: 10px 0;
   line-height: 43px;
+}
+input{
+  color: #fff;
+  background-color: black;
+  border-color: black;
+  outline: 2px solid black;
+  border-radius: .25rem;
+  text-decoration: none;
+  font-size: 1rem;
+  width: fit-content;
+  height: fit-content;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
 }
