Fixed labels for Graph 4

--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -184,7 +184,7 @@
  
                 console.log('Received IntakeDecisionData:', IntakeDecisionData);
  
-                var IntakeDecisionLabels = IntakeDecisionData.map(item => item.IntakeDecisionCounts);
+                var IntakeDecisionLabels = IntakeDecisionData.map(item => item.intakeDecisionCounts);
                 var IntakeDecisionValues = IntakeDecisionData.map(item => item.count);
  
                 // Use predefined colors for the first 5 colors
